--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,17 @@ authors = ["Taylor Beever <taybeever@gmail.com>"]
 python = "^3.9"
 dvc = "^1.10.1"
 boto3 = "^1.16.24"
+pandas = "^1.1.4"
+sklearn = "^0.0"
+pyaml = "^20.4.0"
+scipy = "^1.5.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = "^20.8b1"
+flake8 = "^3.8.4"
+isort = "^5.6.4"
+pre-commit = "^2.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
